<resources>
    <string name="app_name">Расписание</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_main_1">ПС 1401</string>
    <string name="about_main_2">Димас</string>
    <string name="about_main_3">Матвей</string>
    <string name="about_main">About</string>

    <string name="mon_mame">Понедельник</string>
    <string name="mon_first">1. </string>
    <string name="mon_second">2. Высшая Математика</string>
    <string name="mon_third">3. Анлийский язык</string>
    <string name="mon_fourth">4. Защита информации</string>

    <string name="tue_mame">Вторник</string>
    <string name="tue_first">1. </string>
    <string name="tue_second">2. БД</string>
    <string name="tue_third">3. Теория Вероятностей</string>
    <string name="tue_fourth">4. Схемотехника</string>

    <string name="wed_mame">Среда</string>
    <string name="wed_first">1. Физ.ра</string>
    <string name="wed_second">2. БД</string>
    <string name="wed_third">3. WEB</string>
    <string name="wed_fourth">4. Классный час</string>

    <string name="thu_mame">Четверг</string>
    <string name="thu_first">1. ТСПП</string>
    <string name="thu_second">2. Философия</string>
    <string name="thu_third">3. Теория Вероятностей</string>
    <string name="thu_fourth">4. </string>

    <string name="fri_mame">Пятница</string>
    <string name="fri_first">1. Адм. Систем</string>
    <string name="fri_second">2. WEB</string>
    <string name="fri_third1">3. Высшая Математика</string>
    <string name="fri_third2">3. Схемотехника</string>
    <string name="fri_fourth">4. </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
