<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/wed_mame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text= "@string/wed_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textFirst"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/wed_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSecond"
                android:textSize="32sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/wed_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textThird"
                android:textSize="32sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/wed_fourth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textFourth"
                android:textSize="32sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </TableRow>
    </TableLayout>
</LinearLayout>